# zkp_L3_prover_L1_verifier

./: Cargo.toml  README.md  bindings.rs
algebra/elliptic-curve/src/: lib.rs
algebra/primefield/src/: lib.rs
algebra/u256/src/: lib.rs
book/src/: introduction.md
cpp_src/: example.cpp  some_object.hpp
crypto/elliptic-curve-crypto/src/: lib.rs
crypto/hash/src/: lib.rs
crypto/merkle-tree/src/: lib.rs
crypto/stark/: .build.rs.swp  Cargo.toml  bindings.rs  build.rs
crypto/stark/examples/: wrapper.rs
crypto/stark/src/: bindings.rs  build.rs  lib.rs  lib.rs.save  polynomial.rs  prover.rs  verifier.rs
mips_assembler/: Cargo.toml
mips_assembler/src/: label.rs
mips_assembler/tests/: main_test.rs
mips_test/mips-assembler/: Cargo.toml
mips_test/mips-debugger/: Cargo.toml
mips_test/mips-linker/: Cargo.toml
mips_test/mips-simulator/: Cargo.toml
mips_test/mips-types/: Cargo.toml
mipssembler/src/: main.rs
rust_src/: Cargo.toml  build.rs
rust_src/src/: main.rs  the_cpp_lib.rs
starkproof/: Cargo.toml  hello_world.proof
starkproof/examples/mips/: air.rs  bitparser.rs  filereader.rs  inputreader.rs  instruction.rs  main.rs  prover.rs  tables.rs  test  trace.rs  trace.rs.save  vm.rs  vm.rs.save  vm_old.rs
starkproof/examples/mipssembler/: label.rs  label.rs.save  main.rs  main.rs.save  pseudo_instruction.rs  test1.mips
starkproof/libSTARK/: Makefile  README.md  fibonacchi-seq  flags.mk
starkproof/libSTARK/fibonacchiseq/: Add.hpp  Add_EvalPoly.cpp  Add_GenWitness.cpp  Add_constraints.cpp  Add_instance.cpp  Add_instance.hpp  Add_witness.cpp  (+3 more)
(+71 files in other folders)
