[package]
name = "mips_assembler"
version = "0.1.0"
authors = ["Shailesh Nair <shailesh.bnair@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "^1.4"
phf = { version = "0.8", features = ["macros"] }

[dev-dependencies]
assert_cmd = "1.0.2"
tempfile = "3.1.0"
